fixed flex alignment on project cards

--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ header li{
 #myprojects{
     padding: .5em;
     display: flex;
+    flex-wrap: wrap;
+}
+
+#projectgroup{
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #myprojects h2{
@@ -49,15 +56,11 @@ header li{
     width: 10em;
     height: 25%;
     text-align: center;
-    display: flex;
-    flex-wrap: wrap;
 }
 
 .projectcard{
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 1em;
+    width: 1em;
 }
 
 #project1{
